[DR-2934] Tag resources (#1437)
* Add dataset, snapshot tags to database schemas

* OpenAPI spec: include tags when retrieving resources, summaries, and enumerations

* Dataset fetch, enumeration, and summary fetch populate tags from database

* Snapshot fetch, enumeration, and summary fetch populate tags from database

* OpenAPI spec: allow tags to be specified on resource creation

* Dataset creation writes distinct non-null tags to database

In keeping with conventions established by Rawls workspace tagging, I have considered tags to be case-sensitive.
Expanded unit testing, along with refactoring of DatasetDaoTest to delegate dataset deletion to an @After teardown method.
To make that easier, we now register created dataset IDs within helper method DatasetDao.createDataset.

* Introduce TagUtils.getDistinctTags for reuse between resource types

Reorganize unit tests.

* Snapshot creation writes distinct non-null tags to database

Expanded unit testing, along with refactoring of SnapshotDaoTest for more code reuse and automatic resource cleanup.

* Spotless apply after fixing merge conflicts

* Fix build after fixing merge conflicts

* Forgot to commit new file TagUtils

* Can use ListUtils.emptyIfNull rather than Optional in a few utils methods

* OpenAPI spec: support filtering by tags on resource enumeration

* Dataset enumeration supports filtering by tags

We will restrict the result to datasets with all specified tags.
Added DaoUtils.addTagsClause for eventual reuse with snapshots.
Added DatasetDao unit tests for filtering enumerations by tags.

* Snapshot enumeration supports filtering by tags

We will restrict the result to snapshots with all specified tags.
Expanded SnapshotDao unit tests for filtering enumerations by tags.

* Populate snapshot source dataset's tags

* Add new endpoint updateDatasetTags

This endpoint allows callers holding the manage_schema action on the dataset to add or remove tags from